syntax = "proto3";
package com.shieldblaze.expressgateway.controlinterface.loadbalancer.http;

message LoadBalancerResponse {
  string responseText = 1;
}

message StopLoadBalancer {
  string id = 1;
}

message GetLoadBalancerRequest {
  string loadBalancerId = 1;
}

message HTTPLoadBalancer {
  string name = 1;
  string bindAddress = 2;
  int32 bindPort = 3;
  string profileName = 4;
  string tlsPassword = 5;
  bool tlsForServer = 6;
  bool tlsForClient = 7;
  string strategy = 8;
  string sessionPersistence = 9;
}

service HTTPLoadBalancerService {
  rpc start(HTTPLoadBalancer) returns (LoadBalancerResponse);
  rpc get(GetLoadBalancerRequest) returns (HTTPLoadBalancer);
  rpc stop(StopLoadBalancer) returns (LoadBalancerResponse);
}
